--- a/usbCameraTest4/src/main/res/values/strings.xml
+++ b/usbCameraTest4/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
   -->
 <resources>
     <string name="app_name">OTG Demo</string>
+    <string name="camera_notice">温馨提示:您有来访客人！ \n Reminder:Visitor at the door</string>
 </resources>
